--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <div id="app">
 
     </div>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <!-- 
     <script src="./node_modules/react/umd/react.development.js"></script>
     <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    -->
     <script src="./dist/bundle.js"></script>
   </body>
 </html>
